package edu.fiuba.algo3.modelo;

public interface Lapiz {

   void dibujar(int[] posicion);
}
